# occi-freecad-plugin

./: .gitignore  CMakeLists.txt  CollapsibleWidget.py  Init.py  InitGui.py  OCCI.dox  OCCIGui.py  README.md  Utils.py  defaults.yaml  package.xml
Resources/: OCCI.qrc
docs/: adding_a_component.md  adding_an_occi_repository.md  configuring_parameters.md  index.md  installation.md  occi_menu.md  ui_overview.md
ext_lib/charset_normalizer-3.1.0.dist-info/: RECORD
